k8s/apps/dj-html-nodejs-web/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj-html-nodejs-web
spec:
  selector:
    app: dj-html-nodejs-web
  ports:
  - port: 3000
    targetPort: 3000
